2009-09-14 Arno Dudek  <webmaster@adgrafik.at>

	* initial code generated with kickstarter

1.0.0	First release

1.0.1	[BUGFIX] Fixed errors in Tx_AdGoogleMapsApi_MapPlugin.js

1.0.2	[FEATURE] Added min./max. zoom to Map Drawer.
		[BUGFIX] Fixed closeAllInfoWindows in Tx_AdGoogleMapsApi_MapPlugin.js
		[BUGFIX] Added getTypoScriptSetup for extbase >= 1.3.0beta1 in MapDrawer.php and MapPlugin.php.
		[BUGFIX] Added error at missing settings.
		[TASK] Changed loading settings to Tx_Extbase_Configuration_BackendConfigurationManager in MapPlugin.php.